--- a/Istasyon.FileSync/App.xaml
+++ b/Istasyon.FileSync/App.xaml
@@ -3,19 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Istasyon.FileSync">
     <Application.Resources>
-        <DrawingImage x:Key="AppLogo">
-            <DrawingImage.Drawing>
-                <DrawingGroup>
-                    <GeometryDrawing Brush="#3498DB">
-                        <GeometryDrawing.Geometry>
-                            <GeometryGroup>
-                                <PathGeometry Figures="M77.8,689.8 c-1,-0.7 -1.4,-1.8 -1,-2.5 1.1,-1.7 70.7,-43.2 78.8,-46.9 3.9,-1.8 10.4,-4.3 14.5,-5.6 l7.4,-2.3 112.3,-0.5 112.4,-0.5 -6.2,-4.3 c-33.7,-23.8 -56.4,-55.6 -66.5,-93.2 -1.4,-5.2 -2.5,-10.5 -2.5,-11.7 0,-2.1 0.1,-2.2 3.8,-0.9 2,-0.8 18.8,9 37.2,18.3 20.2,10.2 40.7,19.8 51.7,24.1 10,4 18.4,7.2 18.7,7.2 2,0 -0.3,-2.5 -5.5,-6 -8.2,-5.6 -33.1,-25.6 -48.1,-38.6 -16.8,-14.6 -58.9,-57.1 -61.1,-61.6 -1.5,-3.2 -1.7,-7.6 -1.7,-40.1 0,-33.8 0.7,-45.8 2.9,-48 0.4,-0.4 3.8,5.9 7.5,14 10.4,22.8 15.1,31.8 23.2,43.9 10.8,16.1 22.9,30.8 37.3,45.3 31.6,31.8 67.6,54.6 120.6,76.6 24.2,10.1 26.5,11.2 26.5,1.26 0,2.4 -31.5,-2.7 -56.1,-9 -8.5,-2.1 -15.5,-3.8 -15.7,-3.6 -1.3,1.2 37.3,30.8 57.3,44 18.8,12.4 30.5,23.2 30.5,28.2 0,1.9 -2.4,5.1 -9.7,12.6 l-9.8,9.9 6.9,-0.7 c8.8,-0.9 27.1,-5.4 40.4,-9.9 5.6,-1.9 10.2,-3.1 10.2,-2.7 0,3 -14.7,18.1 -23.3,24 -18.9,12.9 -53.4,22.3 -91.7,25.1 -41.5,3 -61.7,3.3 -227.5,3.7 -140.5,0.3 -172.3,0.2 -173.7,-0.9z m413.6,-39.9 c0.4,-0.3 -0.1,-2.3 -0.9,-4.3 -3.7,-8.7 -1.4,-16.6 6.2,-21.9 6,-4.2 12,-4.7 17.7,-1.3 6.1,3.6 8.6,7.9 8.6,15 l0,5.6 3.9,-2 c10.1,-5.1 10.7,-13.8 1.7,-23.8 -10,-11 -29.2,-11.4 -41.3,-0.9 -5.5,5 -8.8,10.6 -10.9,18.7 -0.9,3.6 -2,6.9 -2.4,7.4 -1.4,1.4 -14,3.5 -25.8,4.2 -11.8,0.7 -14.5,2.3 -6.1,1.36 5.4,0.8 48.5,0.5 49.3,-0.3z" />
-                                <PathGeometry Figures="M59.4,61.9 c-0.2,-0.5 -0.9,-1.2 -1.5,-1.5 -0.2,-0.1 -1.4,-0.6 -2.7,-1 -1.2,-0.4 -2.2,-0.8 -2.2,-0.9 0,-0.1 0.6,-0.1 1.3,-0.1 2.5,0 5.9,-0.7 6.5,-1.4 0.2,-0.3 0.4,-0.8 0.5,-1.5 l0.1,-0.6 0.3,0.3 c0.7,0.8 1,2 0.9,3.1 -0.1,1.1 -0.5,2 -1.2,2.8 -0.4,0.4 -1.5,1.3 -1.7,1.3 -0.1,0 -0.2,-0.2 -0.3,-0.4z" />
-                            </GeometryGroup>
-                        </GeometryDrawing.Geometry>
-                    </GeometryDrawing>
-                </DrawingGroup>
-            </DrawingImage.Drawing>
-        </DrawingImage>
+        <BitmapImage x:Key="AppLogo" UriSource="pack://application:,,,/Assets/tigin.png" />
     </Application.Resources>
 </Application>
